sua security va update them api